<resources>
    <string name="app_name">HOABL</string>
    <string name="hoabl">HOABL</string>
    <string name="hoabl_app">HOABL APP</string>
    <string name="MIXPANEL_KEY">b6e5cdf30ddcdfb3886bdaa58a1d0acc</string>
    <string name="new_investment">Investment</string>
    <string name="portfolio">Portfolio</string>
    <string name="promises">Promises</string>
    <string name="profile">Profile</string>
    <string name="transactions_text">Transactions</string>
    <string name="land_transacted">land_transacted</string>
    <string name="security_tv">SECURITY</string>
    <string name="how_to_apply">How to apply?</string>
    <string name="selected_item">Selected item:</string>
    <string name="selecte_gender">Select</string>
    <string name="dialog_msg_auth">Please enter Password</string>
    <string name="dialog_title_auth">Lock Screen</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="whatsapp">Allow Whatsapp Communications</string>
    <string name="login_terms_text">By logging in, you agree to our \n Terms and Conditions &amp; Privacy Policy</string>
    <string name="trouble_login"><u>Trouble Signing in?</u></string>
    <string name="get_otp">Get OTP</string>
    <string name="submit_and_continue">Submit and Continue</string>
    <string name="get_skip">Skip &amp; get started</string>
    <string name="manage_portfolio">Manage Portfolio</string>
    <string name="portfolio_ease">Manage your portfolio with ease</string>
    <string name="track_progress">Track daily portfolio progress</string>
    <string name="manage_information">Manage Information</string>
    <string name="take_information">Take control of your information</string>
    <string name="explore_investment">Explore New Investment</string>
    <string name="browse_deal">Browse deals with HoABL</string>
    <string name="get_exclusive">Get exclusive investment deal</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_digits">Enter 6-digit OTP sent to</string>
    <string name="change_number"><u>EDIT</u></string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="recieve_otp">Didn\'t receive OTP?</string>
    <string name="resend"><b><u>RESEND OTP</u></b></string>
    <string name="otp_verified"><b>OTP Verified!</b></string>
    <string name="NO_INTERNET">No Internet available</string>
    <string name="onestep">Hey, \nJust one last step</string>
    <string name="first_name">First Name </string>
    <string name="help_us">Help us with your</string>
    <string name="see_all">SEE ALL</string>
    <string name="see_all_small_caps">See All</string>
    <string name="new_launch_soon">New Launch</string>
    <string name="my_portfolio">My Portfolio Summary</string>
    <string name="my_projects">My Projects</string>
    <string name="your_project">Your Project updates &amp; Action Items</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="hoabl_promises">HoABL Promises</string>
    <string name="investment_madeeasier">Investing \nmade easier!</string>
    <string name="gold_land">GOLD + Land Investment</string>
    <string name="connectwith_us"><b><u>Connect with us to know more></u></b></string>
    <string name="insights_foryou">Insights for you</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="help_connect">it will help us to connect with you easily</string>
    <string name="update_profile"><b><u>Update Profile</u></b> ></string>
    <string name="empower_someone">Empower \nsomeone Today</string>
    <string name="new_values">and create new values</string>
    <string name="click_here_refer"><b><u>Click here to Refer and Earn</u></b> ></string>
    <string name="application_success">Your application has been submitted \nSuccessfully</string>
    <string name="congrats">Congratulations!</string>
    <string name="refund_sucess">Your payment has been successfully \nrefunded.</string>
    <string name="start_build_portfolio">Start building your Portfolio</string>
    <string name="explore_investment_prjects">Explore New Investment Projects</string>
    <string name="portfolio_summary">You can view your portfolio summary</string>
    <string name="ongoing_projects">Ongoing Projects</string>
    <string name="completed_projects">Completed Projects</string>
    <string name="watch_list">My Watchlist</string>
    <string name="edit"><b><u>Edit</u></b></string>
    <string name="mydocuments">My Documents</string>
    <string name="kyc_documents">KYC, Portfolio documents</string>
    <string name="myaccount">MY Account</string>
    <string name="payment_modes"><![CDATA[Payment Modes & Settings, referral rewards etc]]></string>
    <string name="referral">Referral</string>
    <string name="mywatchlist">My Watchlist</string>
    <string name="viewfor_later">View for later Investments</string>
    <string name="referral_code">Referral Code, app download link</string>
    <string name="security">Security</string>
    <string name="whatsapp_pin"><![CDATA[Whatsapp & PIN authentication, Security Tip, Report]]></string>
    <string name="location_prompt"><![CDATA[Location prompt, SMS & Push Notification, Google assistant access]]></string>
    <string name="help">Help</string>
    <string name="contact_aboutus">Contact, About Us, Privacy Policy, Ratings, Chat</string>
    <string name="faq">Help Centre - FAQs</string>
    <string name="support">Support</string>
    <string name="logout">LOGOUT</string>
    <string name="hurry">Hurry! Only a few units left</string>
    <string name="smart_deals">Smart Deals</string>
    <string name="total_projects">Total Projects</string>
    <string name="completed">Completed</string>
    <string name="intro1">New Generation Land  \n is for everyone. Explore our latest offerings.</string>
    <string name="intro2">When you buy land from us - Rest assured in our promises.</string>
    <string name="intro3">Just like a bank - Your land portfolio is safe and secure with us.</string>
    <string name="enter_your_phonenumber">Enter Your Phone Number*</string>
    <string name="enter_your_email">Enter Your Email Address</string>
    <string name="sent_otp">will be sent to this number</string>
    <string name="otp">OTP </string>
    <string name="type_here">Type here</string>
    <string name="hoabl_permission_title">“HoABL” would like to send and view SMS messages</string>
    <string name="faster_checkout">To view &amp; auto-read OTP for faster \ncheckout experience</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don’t Allow</string>
    <string name="transactions">Transactions</string>
    <string name="land_transactions">Land transacted</string>
    <string name="search">Search</string>
    <string name="presenting">presenting</string>
    <string name="new_generation">New Generation Land</string>
    <string name="apply_now">Apply Now</string>
    <string name="discover_our_investment">Discover our investments</string>
    <string name="following_attention">The following items need your attention</string>
    <string name="complete_kyc">Complete KYC</string>
    <string name="please_complete_payment">Your payment towards Tomorrowland is due on 29th April. Please pay on time to maintain healthy relation.</string>
    <string name="promise_wekeep">Promises we keep</string>
    <string name="testimonial">Testimonials</string>
    <string name="share_joy">The Joy of Sharing begins here</string>
    <string name="refer">Refer someone and earn exciting rewards</string>
    <string name="enter_name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="share">Share</string>
    <string name="friends">with your friends</string>
    <string name="insights">Insights</string>
    <string name="new_launch">New Launch</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="you_invested">You Invested</string>
    <string name="view_more">View More</string>
    <string name="view_more_caps">VIEW MORE</string>
    <string name="view_less_caps">VIEW LESS</string>
    <string name="DemoText">The Isle of Bliss is phase 2 of Codename Bliss Dapoli, a seaside lifestyle plotting development from The House of Abhinandan Lodha</string>
    <string name="And_your_name">Please enter your name.</string>
    <string name="First_name_hint">First Name*</string>
    <string name="Second_name_hint">Second Name </string>
    <string name="full_name_hint">Full Name </string>
    <string name="submit_and_con">Submit and Continue</string>
    <string name="trouble_signing_in">Trouble Signing In?</string>
    <string name="whats_the_issue">What is the issue?</string>
    <string name="unable_to_enter_num">Unable to enter phone number</string>
    <string name="describe_your_issue_in_few_words">Describe your issue in few words</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="registration_complete">Registration Complete</string>
    <string name="quotes_txt">Neque porro quisquam estp qui dolorem ipsu porro quisquam estp qui ipsu. Neque porro quisquam estp qui dolorem ipsu porro quisquam estp qui ipsu.Neque porro quisquam estp qui dolorem ipsu porro quisquam estp qui ipsu.Neque porro quisquam estp qui dolorem ipsu porro quisquam estp qui ipsu.</string>
    <string name="add_your_first_project">Add your first Project</string>
    <string name="instriction_txt">You can manage your invested project at the tip of their fingertips.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="video_drone_text">Video &amp; Drone Videos</string>
    <string name="choose_skus">Choose SKUs and Apply</string>
    <string name="premium_location">Premium Location</string>
    <string name="details">Details</string>
    <string name="see_project_details">See Project Details</string>
    <string name="view_timeline">View Timeline</string>
    <string name="facility_management">Facility Management</string>
    <string name="now_manage_bookings">Now manage your bookings, complaints, visitors, vehicles, etc with ease</string>
    <string name="manage_now">Manage Now</string>
    <string name="view_upload_documents">VIEW&amp;UPLOAD DOCUMENTS></string>
    <string name="latest_videos_images">Latest Images &amp; Videos </string>
    <string name="last_update">Last Update on</string>
    <string name="project_promises">Project Promises</string>
    <string name="liquidity">Liquidity</string>
    <string name="just_additional">With Just an \nadditional 5 lakhs,you \ncan upgrade your next \nInvestment SKU</string>
    <string name="see_details_now">See Details Now</string>
    <string name="frequentl_asked_questions">Frequently asked Questions</string>
    <string name="ask_here">Have any questions Ask Here</string>
    <string name="project_amenities">Project Amenities</string>
    <string name="faq_text">Frequently asked Questions</string>
    <string name="testimonials">Testimonials</string>
    <string name="similar_investments">Similar Investments</string>
    <string name="view_on_map">View on Map</string>
    <string name="price_text_draft"> 20L\nOnwards</string>
    <string name="area_text_draft">2000 sqft Onwards</string>
    <string name="price_text">Price</string>
    <string name="last_name">Last Name</string>
    <string name="new_text">New</string>
    <string name="notification_topic_text">Notification Topic</string>
    <string name="notification_description">This is a dummy text. Notification description goes here</string>
    <string name="_1h">1h</string>
    <string name="please_after_one_hour">You have reached the maximum limit for resending the OTP. Please retry again after an hour.</string>
</resources>